# Dueling-DQN-in-Submarine

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  styles.qss
.bkit/: btw-suggestions.json
.claude/: settings.local.json
core/: __init__.py  dubins_planner.py  ga_allocator.py  heatmap.py  spiral_search.py  uav_navi.py
docs/: Bug.md  Bug_demo_effectiveness_v6.md  Bug_v7.md  DQN_HANDOFF.md  GA_constrained.md  Project_Showcase_Dueling_DQN.html  Reward_Effectiveness_Eval_Design_Modification.md  clean.md  readme.md  scenario_design.md  training_flow.html
docs/architecture/: emergency.md  simulator_and_utils.md
docs/changelog/: Bug_demo_effectiveness_v4.md  Bug_demo_effectiveness_v5.md  Bug_v2.md  Bug_v3.md  Bug_v8.md  Bug_v9.md  supplement.md  supplement2.md  supplement3.md  supplement4.md  supplement5.md
docs/design/: Modification_direction.md  Modification_direction_v2_20260512.md  scenario_v1.md
emergency/: __init__.py  agent.py  demo.py  eval.py  plot_training.py  simulator.py  train.py  utils.py
models/: training_history.npz
scripts/: demo.py  demo_emergency_only.py  eval.py  main.py  plot_training.py  train.py
tests/: test_emergency_invariants.py
