[project]
name = "uav-emergency-dqn"
version = "0.1.0"
description = "Dueling DQN emergency replanning framework for cooperative multi-UAV search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "torch>=2.0",
    "tqdm>=4.64",
    "pandas>=1.5",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
